# cpp

./: CMakeLists.txt  Comments.txt  README.md  generate_build_vc2019.bat  generate_build_vc2022.bat
01/: CMakeLists.txt
01/task_01/: CMakeLists.txt  main.cc
02/: CMakeLists.txt
02/task_1/: 01.cc
02/task_2/: 02.cc
02/task_3/: 03.cc
02/task_4/: 04.cc
02/task_5/: 05.cc
02/task_6/: 06.cc
03/: CMakeLists.txt
03/task_1/: CMakeLists.txt  geom.h
03/task_2/: CMakeLists.txt  geom.cc  geom.h
03/task_3/: CMakeLists.txt  geom.h
03/task_3_1/: main.cc
03/task_3_2/: CMakeLists.txt  main.cc
03/task_3_3/: main.cc
03/task_3_4/: CMakeLists.txt
03/task_3_6/: CMakeLists.txt  Container.hpp  main.cc
03/task_4/: main.cc
03/task_6/: main.cc
03/task_7-8/: CMakeLists.txt  main.cc
04/: CMakeLists.txt
04/task_12/: CMakeLists.txt  main.cc
04/task_13/: CMakeLists.txt  main.cc
04/task_14/: CMakeLists.txt  main.cc
04/task_15/: CMakeLists.txt  main.cc
04/task_4/: CMakeLists.txt  main.cc
04/task_5/: CMakeLists.txt  main.cc
04/task_7/: CMakeLists.txt  main.cc
04/task_8/: CMakeLists.txt  main.cc
05/: CMakeLists.txt
05/task_11/: CMakeLists.txt
05/task_17/: CMakeLists.txt
05/task_2/: CMakeLists.txt  main.cc
05/task_7/: CMakeLists.txt
06/task_1/: CMakeLists.txt  header.h  main.cc
06/task_2/: CMakeLists.txt  FastPImpl.cc  FastPImpl.h  PImpl.cc  PImpl.h  README.md
09/: CMakeLists.txt
09/task_1/: README.md
09/task_14/: CMakeLists.txt  main.cc
09/task_2/: CMakeLists.txt  (+2 more)
10/: CMakeLists.txt
11/: CMakeLists.txt
13/: CMakeLists.txt
(+52 files in other folders)
