cmake_minimum_required(VERSION 3.12 FATAL_ERROR)

set(PROJECT_NAME cpp)
project(${PROJECT_NAME})

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/01)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/02)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/03)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/04)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/05)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/06)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/09)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/10)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/11)